1.6.0.dev
-----------------

- fix issue35: add new EXPERIMENTAL "install_command" testenv-option to configure the
  installation command with options for dep/pkg install.  Thanks Carl Meyer
  for the PR and docs.


- address issueintroduce python2.5 support by vendoring the virtualenv-1.9.1 script
  and forcing pip<1.4. Also the default [py25] environment modifies the
  default installer_command (new config option) to use pip without the "--pre" 
  which was introduced with pip-1.4 and is required if you want to install non-stable releases.
  (tox defaults to install with "--pre" otherwise).

- fix issue1: empty setup files are properly detected, thanks Anthon van
  der Neuth

- during installation of dependencies HOME is set to a pseudo
  location (envtmpdir/pseudo-home).  If an index url was specified
  a .pydistutils.cfg file will be written so that index_url
  is set if a package contains a ``setup_requires``. 

- remove toxbootstrap.py for now because it is broken.

- fix issue109 and fix issue111: multiple "-e" options are now combined
  (previously the last one would win). Thanks Anthon van der Neut.

- add --result-json option to write out detailed per-venv information
  into a json report file to be used by upstream tools.

- add new config options ``usedevelop`` and ``skipsdist`` as well as a
  command line option ``--develop`` to install the package-under-test in develop mode.
  thanks Monty Tailor for the PR.

- always unset PYTHONDONTWRITEBYTE because newer setuptools doesn't like it

- if a HOMEDIR cannot be determined, use the toxinidir.

1.5.0
-----------------

- fix issue104: use setuptools by default, instead of distribute,
  now that setuptools has distribute merged.

- make sure test commands are searched first in the virtualenv 

- re-fix issue2 - add whitelist_externals to be used in ``[testenv*]``
  sections, allowing to avoid warnings for commands such as ``make``,
  used from the commands value.
